--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,12 @@
         <maven.compiler.target>10.2</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.8</version>
+        </dependency>
+    </dependencies>
+
 </project>
