--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,17 @@
         <maven.compiler.target>10.2</maven.compiler.target>
     </properties>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.fxml</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>com.jfoenix</groupId>
