Adding panels to configure the simulation

--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>**/*.fxml</include>
+                    <include>**</include>
                 </includes>
             </resource>
         </resources>
     </build>
-
+-
     <dependencies>
         <dependency>
             <groupId>com.jfoenix</groupId>
