--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>javafx</artifactId>
+            <version>2.2.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/javafx-mx.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
