--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <artifactId>javafx</artifactId>
             <version>2.2.3</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/javafx-mx.jar</systemPath>
+            <systemPath>${project.basedir}/lib/jfxrt.jar</systemPath>
         </dependency>
     </dependencies>
 
