--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,8 @@
   <classpathentry kind="src" path="src/main/resources" including="**" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/com/jfoenix/jfoenix/9.0.8/jfoenix-9.0.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.13-beta-2/junit-4.13-beta-2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/jfoenix/jfoenix/9.0.8/jfoenix-9.0.8.jar" sourcepath="M2_REPO/com/jfoenix/jfoenix/9.0.8/jfoenix-9.0.8-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar" sourcepath="M2_REPO/junit/junit/4.12/junit-4.12-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar"/>
+  <classpathentry kind="lib" path="lib/jfxrt.jar"/>
 </classpath>
