--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/resources" including="**" excluding="**/*.java"/>
+  <classpathentry kind="src" path="resources" including="**" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/com/jfoenix/jfoenix/9.0.8/jfoenix-9.0.8.jar" sourcepath="M2_REPO/com/jfoenix/jfoenix/9.0.8/jfoenix-9.0.8-sources.jar"/>
