--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>resources</directory>
                 <includes>
                     <include>**</include>
                 </includes>
