--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
 LAOP.iml
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-.idea/compiler.xml
-.idea/modules.xml
+.idea/*
 
 # Gradle:
 .idea/gradle.xml
