--- a/.classpath
+++ b/.classpath
@@ -9,9 +9,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/junit-4.13-beta-2"/>
-	<classpathentry kind="lib" path="lib/jfoenix-8.0.8.jar"/>
-	<classpathentry kind="lib" path="lib/jfxrt.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.13-beta-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jfoenix-8.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jfxrt.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.13-beta-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.6.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jfoenix-8.0.8"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
